# pysimp-core

./: .gitignore  README.md  pyproject.toml  verify_annex_i.py  verify_annex_ii.py  verify_annex_iii.py  verify_core.py  verify_fix.py  verify_layer_b.py  verify_layer_c.py  verify_layer_d.py  verify_layer_e.py
assets/: apendicectomia_v1.json
examples/: run_apendicectomia.py
src/pysimp/application/interfaces/: repository.py
src/pysimp/application/use_cases/: run_simulation.py
src/pysimp/domain/entities/: report.py  step.py  surgit.py  template.py  trace.py
src/pysimp/domain/services/: layer_a.py  layer_b.py  layer_c.py  layer_d.py  layer_e.py
src/pysimp/infrastructure/adapters/: snakes_adapter.py
src/pysimp/infrastructure/persistence/: in_memory_repository.py  yaml_loader.py
src/pysimp/utils/: loggers.py
templates/: apendicectomia.yaml
tests/: test_layer_a.py  test_layer_b.py
